Remove all deprecated constructor Long, Integer, Boolean