@@ -93,7 +93,7 @@ public class UploadRequestCreatedEmailBuilder extends GenericUploadRequestEmailB
 		ctx.setVariable("body", "upload request body message");
 		ctx.setVariable("isRestricted", false);
 		ctx.setVariable("recipients", recipients);
-		ctx.setVariable("totalMaxDepotSize", new Long(45687656));
+		ctx.setVariable("totalMaxDepotSize", Long.valueOf(45687656));
 		ctx.setVariable("recipientsCount", recipients.size());
 
 		return ctx;
